# msr-graphrag

./: .gitignore  LICENSE  README.md  final_summary.txt  pyproject.toml  requirements.txt
analysis/: __init__.py  plot_utils.py  summarize_claims.py  visualize_results.py
configs/: claim_qwen7b.yaml  default.yaml  llama8b.yaml  qwen7b.yaml
demo/: __init__.py  app.py  components.py  sample_data.py
examples/: quickstart.py
msr_graphrag/: __init__.py
msr_graphrag/backends/: __init__.py  base.py  hf_transformers.py  mock.py  vllm_backend.py
msr_graphrag/baselines/: __init__.py  lightrag_baseline.py  naive_rag.py
msr_graphrag/controller/: __init__.py  msr_controller.py
msr_graphrag/data/: __init__.py  loaders.py  schema.py
msr_graphrag/eval/: __init__.py  metrics.py  runner.py
msr_graphrag/kg/: __init__.py  builder_lightrag.py  builder_native.py  entity_index.py  graph_store.py
msr_graphrag/pipeline/: __init__.py  answer_generator.py  msr_graphrag.py
msr_graphrag/retrieval/: __init__.py  graph_retriever.py  query_analyzer.py  state.py
msr_graphrag/scorer/: __init__.py  metacognitive_scorer.py  uncertainty.py
scripts/: 01_build_corpus.py  02_index_kg.py  03_run_experiments.py  04_run_ablation.py  05_make_plots.py  06_summarize_claims.py  07_run_full_claim_pipeline.py
tests/: test_answer_generator.py  test_metrics.py  test_scorer.py  test_smoke.py  test_summarize_claims.py
